feat(main-page): api integration
